# mymagicbox

./: .gitignore  LICENSE  README.md
basetest/20141029/: testDeformer.mel  testDeformer.py
basetest/testDeformer/: testDeformer.mod
basetest/testDeformer/docs/: readme.odt  testDeformer.txt
basetest/testDeformer/scripts/: testDeformer.mel  testDeformer2.mel  testDeformer_list.mel  testDeformer_ui.mel  userSetup.mel
basetest/testDeformer/src/: plugin.cpp  testDeformer.cpp  testDeformer.h
basetest/testDeformer/test/: test0.ma  test_3spheres.ma  test_4spheres.ma  test_pyramid.ma
basetest/testProjection/: testProjection.mod
basetest/testProjection/docs/: readme.odt
basetest/testProjection/plug-ins/: quadricShape.mll  testProjection.mll
basetest/testProjection/src/: NeHeGL.cpp  NeHeGL.h  plugin.cpp  testProjectionNode.cpp  testProjectionNode.h  texture.cpp  texture.h
basetest/testProjection/test/: test_proj.ma
basetest/testuv/: testuv.mod
basetest/testuv/docs/: readme.odt
basetest/testuv/scripts/: utility.mel
basetest/testuv/src/: objectuv.cpp  objectuv.h  peltOverlapCmd.cpp  peltOverlapCmd.h  plugin.cpp  testuv.cpp  testuv.h  testuvCmd.cpp  testuvCmd.h
basetest/testuv/test/: readme.txt  test.ma
common/: copyright.h  flog.py  log.cpp  log.h  node_ids.h
common/mymagicbox/: AETemplateBase.py  log.py  mmb_flog.py
dynamic_enum/: CMakeLists.txt  dynamic_enum.mod
dynamic_enum/docs/: readme.txt
dynamic_enum/scripts/: AEdynamic_enumTemplate.mel
dynamic_enum/src/: CMakeLists.txt  dynamic_enum.cpp  dynamic_enum.h  plugin.cpp
mystring/: CMakeLists.txt  mystring.mod
mystring/docs/: readme.txt
mystring/scripts/: AEdynamic_mystring.mel
mystring/src/: CMakeLists.txt  main.cpp  mystring.cpp  mystring.h  plugin.cpp
node_template/: CMakeLists.txt  node_template.mod
node_template/docs/: readme.txt
node_template/scripts/: AEnode_templateTemplate.mel  userSetup.py
node_template/scripts/AETemplates/: AEnode_templateTemplate.py
node_template/src/: CMakeLists.txt  node_template.cpp  node_template.h  plugin.cpp
tornado_field/: CMakeLists.txt  tornado_field.mod
tornado_field/docs/: readme.txt
tornado_field/scripts/: AEtornadoFieldTemplate.mel  userSetup.py
tornado_field/scripts/AETemplates/: AEtornadoFieldTemplate.py
tornado_field/src/: CMakeLists.txt  particle.cpp  particle.h  plugin.cpp  tornado_field.cpp  tornado_field.h
tornado_field/test/: position.ma  position.txt  test_CentripetalForce.ma  test_simple_centripetal_force.ma  tornadoField.ma  tornadoField.mel
tornado_field/test/test_0001/: test_centripetal_force.txt
tornado_field/test/test_0001/data/: test.ma
tornado_field/test/test_0001/ref/: readme.txt
tornado_field/test/test_0002/: test_centripetal_force.txt
tornado_field/test/test_0003/: test_centripetal_force.txt
version_control/: CMakeLists.txt  version_control.mod
version_control/docs/: readme.txt
version_control/scripts/: userSetup.py
version_control/scripts/AETemplates/: AEtestNodeATemplate.py  AEtestNodeBTemplate.py  AEversion_controlTemplate.py
version_control/scripts/upgrade/: mmb_upgrade.py  mmb_upgrade_mgr.py
version_control/src/: CMakeLists.txt  msg_cb_mgr.cpp  msg_cb_mgr.h  plugin.cpp  test_node_a.cpp  test_node_a.h  test_node_b.cpp  test_node_b.h  version.h  version_control_node.cpp  version_control_node.h  version_helper.cpp  version_helper.h
version_control/test/: test00.ma  version_010.ma  version_100.ma
(+6 files in other folders)
